@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/iptstate/iptstate-2.2.3.ebuild,v 1.4 2012/02/05 18:25:50 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/iptstate/iptstate-2.2.3.ebuild,v 1.5 2013/01/13 19:53:48 ulm Exp $
 
 EAPI="2"
 
@@ -14,8 +14,8 @@ DEPEND="sys-libs/ncurses
 	>=net-libs/libnetfilter_conntrack-0.0.50"
 RDEPEND="${DEPEND}"
 
+LICENSE="ZLIB"
 SLOT="0"
-LICENSE="as-is"
 KEYWORDS="amd64 ~hppa ~ppc x86"
 IUSE=""
 
